# Visionneur-de-netlist-SXLIB

./: README.md
TME4/install/include/: Cell.h  Instance.h  Net.h  Node.h  Term.h
TME4/src/: CMakeLists.txt  Instance.cpp  Net.h  Point.cpp  Shape.cpp  Shape.h  Symbol.h
TME4/work/cells/: and2.xml  halfadder.xml  or2.xml  xor2.xml
install/include/: CellViewer.h  CellWidget.h  InstancesModel.h  InstancesWidget.h  Node.h  OpenCellDialog.h  Point.h  Term.h
src/: ArcShape.cpp  BoxShape.cpp  CMakeLists.txt  Cell.cpp  CellViewer.cpp  CellViewer.h  CellWidget.cpp  CellWidget.h  CellsLib.cpp  CellsLib.h  CellsModel.cpp  CellsModel.h  EllipseShape.cpp  Error.h  Indentation.cpp  Instance.cpp  Instance.h  InstancesModel.cpp  InstancesWidget.cpp  InstancesWidget.h  Line.cpp  Line.h  LineShape.cpp  Main.cpp  Net.cpp  Net.h  Node.cpp  Node.h  OpenCellDialog.cpp  OpenCellDialog.h  Point.h  SaveCellDialog.cpp  SaveCellDialog.h  Shape.cpp  Shape.h  Symbol.cpp  Term.cpp  Term.h  TermShape.cpp
work/cells/: halfadder.xml  halfadder.xml~  xor2.xml
